--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.ucweb.union.ads.demo.cocos"
         minSdkVersion 11
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -44,6 +44,7 @@ android {
             }
         }
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
@@ -51,7 +52,7 @@ dependencies {
     compile project(':libsdk');
     // Facebook Ads
     // Google AdMob
-    compile 'com.facebook.android:audience-network-sdk:4.9.+'
+    compile 'com.facebook.android:audience-network-sdk:4.10.+'
     compile 'com.google.android.gms:play-services-ads:8.4.0'
-    compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.android.support:support-v4:23.2.1'
 }
