update to 2.4, add video support

--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url 'https://raw.githubusercontent.com/uc-union/union-ads-maven-repository/master'
+        }
         jcenter()
     }
 }
